--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
 </head>
 <body>
     <div class="container__game">
-        <div>
+        <div class="container__game__board">
+            <canvas id="board" width="1200" height="800"></canvas>
+            <div class="game__over">
+                
+            </div>
+        </div>
+        <p class="container__game__text"></p>
+        <span class="disabled"></span>
+        <div class="container__lines">
+            
+        </div>
+        <div class="container__incorrectLetter">
 
         </div>
-        <canvas id="board" width="1200" height="800"></canvas>
-        <p class="container__game__text"></p>
-        <button class="btn newGame" id="btnNewGame">Nuevo Juego</button>
-        <button class="btn giveUp">Desistir</button>
+        <div class="container__buttons">
+            <button class="btn newGame" id="btnNewGame">Nuevo Juego</button>
+            <button class="btn giveUp">Desistir</button>
+        </div>
     </div>     
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
