--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container__menu">
         <button class="btn container__menu__button btn__startGame">Iniciar Juego</button>
         <button class="btn container__menu__button btn__word bg__White">Agregar Palabra</button>
-        <p class="container__menu__remember">Recuerda usar mayusculas ;)</p>
+        <p class="container__menu__remember">Recuerda usar letras mayusculas ;)</p>
     </div>
     <div class="container__game hidden">
         <div class="container__game__board">
