--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class="container__addWord__buttons">
-            <button type="submit" class="btn btn__blue btn__saveAndStart">Guardar y empezar</button>
+            <button type="submit" class="btn btn__blue btn__saveAndStart">Guardar y Empezar</button>
             <button class="btn btn__white btn__cancelAddWord">Cancelar</button>
         </div>
     </div>   
